# tastytrade

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  README.tpl
.github/workflows/: semver.yml
Doc/: FuturesNestedOptionChainSerializer.json  Instruments.json  Instruments_Implementation_Status.md  futures_nested_options_chain.json
cli/: Cargo.toml
cli/src/: main.rs
dxfeed/: Cargo.toml
dxfeed/src/: lib.rs
examples/Instruments/: Cargo.toml
examples/accounts-status/: Cargo.toml
examples/accounts-status/src/: main.rs
examples/instruments/: Cargo.toml
examples/miscellaneous/: Cargo.toml
examples/quote-streaming/: Cargo.toml
examples/quote-streaming/src/: main.rs
libdxfeed-sys/: build.rs
src/: error.rs  lib.rs  prelude.rs
src/api/: accounts.rs  base.rs  client.rs  instrument.rs  mod.rs  option_chain.rs  quote_streaming.rs
src/streaming/: account_streaming.rs  mod.rs  quote_streamer.rs
src/types/: balance.rs  dxfeed.rs  event.rs  instrument.rs  login.rs  mod.rs  order.rs  position.rs
src/utils/: config.rs  download.rs  file.rs  logger.rs  mod.rs  parse.rs
tests/integration/: mod.rs
