[package]
name = "tastytrade"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Library for trading through tastytrade's API"
repository = "https://github.com/joaquinbejar/tastytrade"

include = [
	"benches/**/*",
	"src/**/*",
	"Cargo.toml",
	"README.md",
	"LICENSE",
	"examples/**/*.rs",
	"tests/**/*.rs",
	"Makefile",
	"rust-toolchain.toml",
	"Draws/**/*.png",
	"Docker/**/*.Dockerfile",
	"Docker/**/*.yml",
]

[dependencies]
derive_builder = "0.20.2"
reqwest = { version = "0.12.12", features = ["json"] }
rust_decimal = { version = "1.29.1", features = [
	"serde-with-arbitrary-precision",
	"serde-with-float",
] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "2.0.12"
flume = "0.11.1"
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tokio = { version = "1.28.1", features = ["full"] }
futures-util = "0.3.28"
erased-serde = "0.4.6"
dxfeed = "0.2.3"
dxlink = "0.1.3"
chrono = { version = "0.4.31", features = ["serde"] }
serde_with = "3.4.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
serial_test = "3.2.0"


[[test]]
name = "tests"
path = "tests/integration/mod.rs"

[workspace]
members = [
	"examples/accounts-status",
	"examples/quote-streaming",
	"cli",
	"examples/miscellaneous",
]

[workspace.dependencies]
tastytrade = { path = "." }
