[package]
name = "tastytrade-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
rust_decimal = "1.37"
tastytrade = { path = ".." }
tokio = "1.47"
tui = "0.19"
futures = "0.3"
futures-util = "0.3"