[package]
name = "tastytrade-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0"}
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
rust_decimal = { workspace = true }
tastytrade = { workspace = true }
tokio = { workspace = true }
tui = { version = "0.19" }
futures = { version = "0.3"}
futures-util = { version = "0.3" }