[package]
name = "tastytrade-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tui = { version = "0.19" }
futures = { version = "0.3"}
futures-util = { version = "0.3" }
anyhow = { version = "1.0"}
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
# imported from workspace
rust_decimal = { workspace = true }
tastytrade = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
pretty-simple-display = { workspace = true }
serde_json = { workspace = true }