[package]
name = "dxfeed"
version = "0.2.4"
edition = "2021"
description = "Ergonomic serializable rust-wrappers around libdxfeed-sys"
license = "MIT"
repository = "https://github.com/spotgamma/dxfeed-rust-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
widestring = "1.2"
libdxfeed-sys = { path = "../libdxfeed-sys", features = ["serde"] }

strum_macros = "0.27"
strum = { version = "0.27", features = ["derive"] }
