[package]
name = "instruments"
version = "0.1.0"
edition = "2024"


[dependencies]
tastytrade = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
rust_decimal = { workspace = true, features = [
    "serde-with-arbitrary-precision",
    "serde-with-float",
] }