[package]
name = "instruments"
version = "0.1.0"
edition = "2021"

[dependencies]
tastytrade = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }